--- a/assets/header.css
+++ b/assets/header.css
@@ -2,11 +2,11 @@
     height: 60px;
     line-height: 60px;
     border-bottom: thin lightgrey solid;
-    textAlign': 'center';
+    text-align: center;
 }
 
 .app-header .app-header--title {
     font-size: 22px;
-    padding-left: 5px;
-    textAlign': 'center';
+    padding-left: 50px;
+    text-align: center;
 }
