--- a/assets/header.css
+++ b/assets/header.css
@@ -6,6 +6,12 @@
 }
 
 .app-header .app-header--title {
+    font-size: 50px;
+    padding-left: 50px;
+    text-align: center;
+}
+
+.app-text--title {
     font-size: 22px;
     padding-left: 50px;
     text-align: center;
