--- a/assets/header.css
+++ b/assets/header.css
@@ -5,6 +5,12 @@
     text-align: center;
 }
 
+.app-base{
+  	margin: auto;
+  	width: 50%;
+ 	padding: 10px;
+}
+
 .app-header .app-header--title {
     font-size: 50px;
     padding-left: 50px;
