--- a/assets/header.css
+++ b/assets/header.css
@@ -21,3 +21,12 @@
     font-size: 22px;
     text-align: center;
 }
+
+.hero-image {
+  background-color: #cccccc;
+  height: 500px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
