--- a/assets/header.css
+++ b/assets/header.css
@@ -9,6 +9,7 @@
     margin: auto;
     width: 50%;
     padding: 10px;
+    border-style: solid;
 }
 
 .app-header .app-header--title {
@@ -18,7 +19,7 @@
 }
 
 .app-text--title {
-    font-size: 22px;
+    font-size: 28px;
     text-align: center;
 }
 
