--- a/assets/header.css
+++ b/assets/header.css
@@ -19,11 +19,33 @@
 }
 
 .app-text--title {
-    font-size: 28px;
-    text-align: center;
+	font-size: 28px;
+	text-align: center;
 }
 
-.hero-image {
+.app-red--title{
+	font-size: 28px;
+	font_family: cursive,
+	textAlign: center,
+	color: #8B0000
+}
+
+.app-orange--title{
+	font-size: 32px;
+	font_family: cursive,
+	textAlign: center,
+	color: #FF8C00
+}
+
+.app-green--title{
+	font-size: 40px;
+	font_family: cursive,
+	textAlign: center,
+	color: $006400
+}
+
+
+.app-hero-image {
   background-color: #cccccc;
   height: 500px;
   background-position: center;
