--- a/assets/header.css
+++ b/assets/header.css
@@ -25,23 +25,23 @@
 
 .app-red--title{
 	font-size: 28px;
-	font_family: cursive,
-	textAlign: center,
-	color: #8B0000
+	font_family: cursive;
+	textAlign: center;
+	color: #8B0000;
 }
 
 .app-orange--title{
 	font-size: 32px;
-	font_family: cursive,
-	textAlign: center,
-	color: #FF8C00
+	font_family: cursive;
+	textAlign: center;
+	color: #FF8C00;
 }
 
 .app-green--title{
 	font-size: 40px;
-	font_family: cursive,
-	textAlign: center,
-	color: $006400
+	font_family: cursive;
+	textAlign: center;
+	color: $006400;
 }
 
 
