--- a/assets/header.css
+++ b/assets/header.css
@@ -25,22 +25,22 @@
 
 .app-red--title{
 	font-size: 28px;
-	font_family: cursive;
-	textAlign: center;
+	font-family: cursive;
+	text-align: center;
 	color: #8B0000;
 }
 
 .app-orange--title{
 	font-size: 32px;
-	font_family: cursive;
-	textAlign: center;
+	font-family: cursive;
+	text-align: center;
 	color: #FF8C00;
 }
 
 .app-green--title{
 	font-size: 40px;
-	font_family: cursive;
-	textAlign: center;
+	font-family: cursive;
+	text-align: center;
 	color: $006400;
 }
 
