--- a/assets/header.css
+++ b/assets/header.css
@@ -6,16 +6,16 @@
 }
 
 .app-base{
-    margin: auto;
-    width: 50%;
-    padding: 10px;
-    border-style: solid;
+	margin: auto;
+	width: 50%;
+	padding: 10px;
+	border-style: solid;
 }
 
-.app-header .app-header--title {
-    font-size: 50px;
-    padding-left: 50px;
-    text-align: center;
+.app-header--title {
+	font-size: 50px;
+	padding-left: 50px;
+	text-align: center;
 }
 
 .app-text--title {
@@ -44,10 +44,10 @@
 
 
 .app-hero-image {
-  background-color: #cccccc;
-  height: 500px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
+	background-color: #cccccc;
+	height: 500px;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: relative;
 }
