--- a/assets/typography.css
+++ b/assets/typography.css
@@ -1,5 +1,12 @@
 body {
-    font-family: sans-serif;
+	font-family: sans-serif;
+	margin: 0
+	height: 500px;
+	background-image: url('assets/achtergrond.png')
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: stretch;
+	position: relative;
 }
 h1, h2, h3, h4, h5, h6 {
     color: 000000
