--- a/assets/header.css
+++ b/assets/header.css
@@ -10,6 +10,11 @@
 	width: 50%;
 	padding: 10px;
 	border-style: solid;
+	background-image: url('assets/achtergrond.png')
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: stretch;
+	position: relative;
 }
 
 .app-header--title {
@@ -47,6 +52,6 @@
 	height: 500px;
 	background-position: center;
 	background-repeat: no-repeat;
-	background-size: cover;
+	background-size: stretch;
 	position: relative;
 }
